--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ p {
     background-color: #e8a87c;
     max-width: 800px;
     padding: 10px;
+    min-width: 250px;
+    min-height: 300px;
 }
 
 .results {
